--- a/index.html
+++ b/index.html
@@ -11,12 +11,48 @@
 </head>
 
 <body>
+    <template id="listTemplate">
+        <!-- list -->
+        <div class="column is-one-quarter panel">
+                <div class="panel-heading has-background-info">
+                    <div class="columns">
+                        <div class="column">
+                            <h2 class="has-text-white"><!--NOM--></h2>
+
+                            <form action="" method="POST" class="is-hidden">
+                                <input type="hidden" name="list-id" value="1">
+                                <div class="field has-addons">
+                                    <div class="control">
+                                        <input type="text" class="input is-small" name="list-name" value="" placeholder="Nom de la liste">
+                                    </div>
+                                    <div class="control">
+                                        <button class="button is-small is-success">Valider</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+
+                        <div class="column is-narrow">
+                            <a href="#" class="is-pulled-right">
+                                <span class="icon is-small has-text-white">
+                                    <i class="fas fa-plus"></i>
+                                </span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-block is-block has-background-light">
+                    <!--CARD-->
+                </div>
+            </div>
+            <!--/ list -->
+    </template>
     <section class="section ">
         <div class="container">
             <h1 class="title">
                 oKanban
             </h1>
-            <div class="columns">
+            <div class="columns" id="jeTriche">
                 <!-- list -->
                 <div class="column is-one-quarter panel">
                     <div class="panel-heading has-background-info">
@@ -307,8 +343,11 @@
         </div>
     </div>
 
-    <!-- Chargement de mon fichier JS -->
-    <script src="./js/app.js"></script>
+   <!-- importer jQuery -->
+   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+   <!-- Chargement de mon fichier JS -->
+   <script type="text/javascript" src="js/app.js"></script>
 </body>
 
 </html>
